--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="year">
                                 <i class='bx bx-calendar'></i> 2022 - 2024</div>
                                 <h3>BS Computer Science - AMA Computer Learning Center</h3>
-                                <p>BS Computer Science 1th - 2nd Year</p>
+                                <p>BS Computer Science 1st - 2nd Year</p>
                         </div>
                     </div>
 
